--- a/views/hello.ejs
+++ b/views/hello.ejs
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hi admin</h1>
+    <h1>Hi <%= user.username %></h1>
+    <script>
+      console.log('<%= user.accessToken %>')
+    </script>
   </body>
 </html>
