--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
       <div class="row">
         <div class="col-md-5 mx-auto mt-5">
           <h3 class="text-center">Login</h3>
-          <form method="POST" action="/admin/login">
+          <form method="POST" action="/login">
             <div class="form-group">
               <label for="exampleInputUsername1">Username</label>
               <input
